--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.6.2",
     "typescript": "^4.6.3"
+  },
+  "dependencies": {
+    "@type-challenges/utils": "^0.1.1"
   }
 }
