--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
+    "@type-challenges/utils": "^0.1.1",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "@typescript-eslint/parser": "^5.19.0",
     "eslint": "^8.13.0",
@@ -14,9 +15,6 @@
     "eslint-config-xo": "^0.40.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.6.2",
-    "typescript": "^4.6.3"
-  },
-  "dependencies": {
-    "@type-challenges/utils": "^0.1.1"
+    "typescript": "^5.1.6"
   }
 }
